fix: settings history dps align

--- a/src/views/Settings.scss
+++ b/src/views/Settings.scss
@@ -201,6 +201,7 @@
   &-dps {
     display: flex;
     justify-content: flex-end;
+    align-items: baseline;
     padding-right: $padding-lg;
   }
 }
